unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/pse__Default_Assignments_for_Jira_Batch__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__DefaultAssignmentsForJiraBatchHelp</customHelpPage>
    <description>Stores the status and details of Default Assignments for Jira Batch Apex jobs.</description>
    <label>Default Assignments for Jira Batch</label>
    <nameField>
        <label>Default Assignments for Jira Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Assignments for Jira Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>