unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Apex_Job_ID__c</fullName>
    <description>Unique identifier for the current batch Apex job.</description>
    <inlineHelpText>Unique identifier for the current batch Apex job.</inlineHelpText>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>