unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</description>
    <inlineHelpText>Lookup to the batch process record. The batch process record is deleted automatically if the process completes successfully.</inlineHelpText>
    <label>Batch Process</label>
    <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
    <relationshipLabel>Default Assignments for Jira Batches</relationshipLabel>
    <relationshipName>Assignments_to_Sync_Time_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>