unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Default_Assignments_for_Jira_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Assignments_for_Jira_Batch_ID__c</fullName>
    <description>The batch record identifier.</description>
    <displayFormat>DAJB-{000000}</displayFormat>
    <inlineHelpText>The batch record identifier.</inlineHelpText>
    <label>Default Assignments for Jira Batch ID</label>
    <type>AutoNumber</type>
</CustomField>