unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Notification_Type__c</fullName>
    <description>The type of notification sent when the process completed: Successful, Failure, or Mixed.</description>
    <formula>IF( pse__Total_Number_of_Logs__c = 0, 'Undefined',
IF ( AND( pse__Total_Number_of_Errors__c=0,pse__Total_Number_of_Aborts__c=0,pse__Total_Number_of_External__c=0), 
'Successful', 
IF(pse__Total_Number_of_Errors__c = pse__Total_Number_of_Logs__c, 
'Failure', 
IF(pse__Total_Number_of_Aborts__c &gt; 0, 
'Failure', 
IF( pse__Total_Number_of_External__c &gt; 0, 
'Failure', 
'Mixed' 
) 
) 
)
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of notification sent when the process completed: Successful, Failure, or Mixed.</inlineHelpText>
    <label>Notification Type</label>
    <type>Text</type>
</CustomField>