unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The current status of the batch job: "Processing", "Complete", or "Error".</description>
    <inlineHelpText>The current status of the batch job: "Processing", "Complete", or "Error".</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>