unpackaged/main/default/objects/pse__Default_Assignments_for_Jira_Batch__c/fields/pse__Total_Number_of_Logs__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Number_of_Logs__c</fullName>
    <description>The total number of logs.</description>
    <inlineHelpText>The total number of logs.</inlineHelpText>
    <label>Total Number of Logs</label>
    <summaryForeignKey>pse__Default_Assignments_for_Jira_Batch_Logs__c.pse__Default_Assignments_for_Jira_Batch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>